<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">

    <include
        android:id="@+id/toolbarPantallaTareas"
        layout="@layout/toolbar_screen_previous_records"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="591dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarPantallaTareas">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingTop="25dp">

            <TextView
                android:id="@+id/textView28"
                style="@style/taskStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/yourpreviousrecords"
                android:textColor="?attr/colorTextInBackground"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/textView16"
                    style="@style/TextViewClaro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="?attr/colorTextInBackground"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="chooseDate"
                    android:text="@string/none"
                    android:textColor="?attr/colorTextInBackground" />
            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btn_applyFilter"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorCard1"
                android:onClick="setGraph"
                android:text="@string/apply"
                android:textColor="?attr/colorTextInCard1"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/summaryItem"
                android:layout_width="match_parent"
                android:layout_height="365dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>